--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Questrial&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap");
 
+/*GLOBAL CSS*/
 * {
   margin: 0;
   padding: 0;
@@ -23,12 +24,34 @@ body {
   max-width: 1300px;
   margin: auto;
 }
+.section-container {
+  margin-top: 5rem;
+}
 .title {
   font-weight: 600;
   color: var(--dark-grayish-blue-color);
 }
 .content {
   color: var(--grayish-blue-color);
+}
+.title-heading {
+  color: var(--dark-grayish-blue-color);
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.title-content {
+  color: var(--grayish-blue-color);
+}
+
+.title-container {
+  width: 100%;
+  max-width: 768px;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 /*
 
@@ -150,32 +173,10 @@ CLIPBOARD SECTION
 
 
 ******/
-.clipboard {
-  margin-top: 5rem;
-}
 .clipboard-container {
   display: flex;
   flex-direction: column;
   gap: 3rem;
-}
-.clipboard-title-container {
-  width: 100%;
-  max-width: 768px;
-  margin: auto;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.clipboard-title-heading {
-  color: var(--dark-grayish-blue-color);
-  font-weight: 600;
-  font-size: 30px;
-}
-
-.clipboard-title-content {
-  color: var(--grayish-blue-color);
 }
 
 .device-img-container {
@@ -186,6 +187,37 @@ CLIPBOARD SECTION
 .device-img {
   width: 100%;
   max-width: 700px;
+}
+
+/******
+
+SUPERCHARGE SECTION
+
+
+******/
+
+.supercharge-body-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 3rem;
+}
+.supercharge-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: center;
+}
+
+.supercharge-heading {
+  color: var(--dark-grayish-blue-color);
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.supercharge-content {
+  color: var(--grayish-blue-color);
 }
 /**
 
@@ -227,5 +259,8 @@ MEDIA QUERIES
 
   .snippet-text-heading {
     text-align: start;
+  }
+  .supercharge-body-container {
+    flex-direction: row;
   }
 }
